    - Ticket #177 - Route matching on / or "end of URI" works better
    - Ticket #190 - Added syntactic suggar for static-dir routes

0.0.7 2017.07.04
    - Ticket #164 - bin/bailador version should work even after installation 
    - Ticket #98 - Added Bailador::Feature::AutoHead and added head() keyword to setup head routes manually
    - Named arguments to bin/bailador such as --config can now be anywhere
    - Added documentation to the usage of bin/bailador
    - Ticket #111 - added a test for Bailador::Configuration which evaluates %*ENV and overrides settings file according #161
    - Ticket #170 - error handlers use Content-Type header according to RFC 2616
    - Ticket #166 and #167 - The command 'watch' watches the app.pl file as well as all files or dirs
      that are stated in '-w' command line switch
    - Add custom error handing functions #131

0.0.6 2017.06.27
    - Ticket #147 - no test output for t/08-* testcases
    - Added a test case for bailador watch command
    - Added Bailador::Commands for
        * tiny (HTTP::Server::Tiny)
        * easy (HTTP::Easy)
        * ogre (HTTP::Server::Ogre), which is an exprimental and new async P6W server and
        * routes, which prints out all routes of your application. (Ticket #165)
    - Ticket #107 and #137 - Log::Any can be used for logging. p6w.errors will be used ad default out
    - Add example/api.pl6 to demonstrate returning JSON.
    - Add test to skeleton created by --new, move application to bin/.
    - Add experimental code, example, and test for gradual serving. #120
    - Change the way 'bailador --new" accepts its parameter. Eliminate duplicate usage. #156.

0.0.5 2017.06.16
    - Ticket #158 - passing perl6 include lib directory downstream
    - Ticket #148 - bailador command line tool can read out --config options
    - Ticket #142 - views directory is now configurable
    - Bailador can now use a settings yaml file